add api for register and job
